# nsu-parallel

Lab1MPI/: CMakeLists.txt  main.cpp  mpi1.cpp  mpi2.cpp
Lab2OpenMP/: main.cpp  openmp1.cpp  openmp2.cpp
Lab3MPI/: main.cpp
